--- a/front-and-back-matter/notations.tex
+++ b/front-and-back-matter/notations.tex
@@ -6,6 +6,23 @@
 \item[$\mathcal{S}$] Spatial study region $\mathcal{S} \subseteq \mathbb{R}^2$.
 \item[$s \in \mathcal{S}$] Point location.
 \item[$\mathcal{T}$] Temporal study period $\mathcal{T} \subseteq \mathbb{R}$.
-\item[$t \in \mathcal{T}$] Time. 
+\item[$t \in \mathcal{T}$] Time.
+\item[$\y$] Data, a $n$-vector.
+\item[$\bphi$] Parameters, a $d$-vector $(\phi_1, \ldots, \phi_d)$.
+\item[$\x$] Latent field, a $N$-vector $(x_1, \ldots, x_N)$.
+\item[$\btheta$] Hyperparameters, a $m$-vector $(\theta_1, \ldots, \theta_m)$.
+\item[$x \sim p(x)$] $x$ is distributed according to $p(x)$.
+\item[$A_i$] Areal unit.
+\item[$A_i \sim A_j$] Adjacency between areal units.
+\item[$\mathbf{H}$] Hessian matrix.
+\item[$\mathbf{R}$] Structure matrix.
+\item[$\mathbf{Q}$] Precision matrix.
+\item[$\bm{\Sigma}$] Covariance matrix.
+\item[$\mathcal{N}$] Gaussian distribution.
+\item[$k: \mathcal{X} \times \mathcal{X} \to \mathbb{R}$] Kernel function on the space $\mathcal{X}$.
+\item[$A_i \sim A_j$] Adjacency between areal units.
+\item[$\mathcal{Q}$] A set of quadrature nodes.
+\item[$\omega: \mathcal{Q} \to \mathbb{R}$] A quadrature weighting function.
+\item[$\mathcal{Q}(m, k)$] Gauss-Hermite quadrature points in $m$ dimensions with $k$ nodes per dimension, constructed according to a product rule.
 
 \end{mclistof} 
