--- a/references.bib
+++ b/references.bib
@@ -826,3 +826,45 @@ URL= {https://www.r-inla.org/faq},
   author={Gelman, Andrew},
   year={2005}
 }
+
+@article{baker1994multinomial,
+  title={{The multinomial-Poisson transformation}},
+  author={Baker, Stuart G},
+  journal={Journal of the Royal Statistical Society: Series D (The Statistician)},
+  volume={43},
+  number={4},
+  pages={495--504},
+  year={1994},
+  publisher={Wiley Online Library}
+}
+
+@article{paciorek2013spatial,
+  title={Spatial models for point and areal data using Markov random fields on a fine grid},
+  author={Paciorek, Christopher J and others},
+  journal={Electronic Journal of Statistics},
+  volume={7},
+  pages={946--972},
+  year={2013},
+  publisher={The Institute of Mathematical Statistics and the Bernoulli Society}
+}
+
+@article{meng2018statistical,
+  title={Statistical paradises and paradoxes in big data (i) law of large populations, big data paradox, and the 2016 us presidential election},
+  author={Meng, Xiao-Li},
+  journal={The Annals of Applied Statistics},
+  volume={12},
+  number={2},
+  pages={685--726},
+  year={2018},
+  publisher={JSTOR}
+}
+
+@article{chen2014use,
+  title={The use of sampling weights in Bayesian hierarchical models for small area estimation},
+  author={Chen, Cici and Wakefield, Jon and Lumely, Thomas},
+  journal={Spatial and spatio-temporal epidemiology},
+  volume={11},
+  pages={33--43},
+  year={2014},
+  publisher={Elsevier}
+}
