--- a/templates/template.tex
+++ b/templates/template.tex
@@ -198,6 +198,7 @@ $endif$
 
 \newcommand{\Sc}{\mathcal{S}}
 \newcommand{\R}{\mathcal{R}}
+\newcommand{\bR}{\mathbf{R}}
 \newcommand{\N}{\mathcal{N}}
 \newcommand{\X}{\mathcal{X}} 
 \newcommand{\m}{\mathbf{m}}
