--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -63,23 +63,28 @@ ssa_pop2022 <- 1.2 * 1e9 #' From the world bank
 ```
 
 This thesis is about applied and methodological Bayesian statistics.
-The sense in which it is Bayesian is that I use probability models to arrive at conclusions based on data.
-The sense in which it is applied and methodological is that I am concerned with real world questions and the means to answer them.
+It is Bayesian in that I use probability models to arrive at conclusions based on data.
+It is applied and methodological in that I am concerned first with real world questions and second with the means to answer them.
 
-The real world questions relate to surveillance of the HIV epidemic in sub-Saharan Africa, a region it is estimated that `r round(ssa_plhiv2022 / plhiv2022 * 100)`% of the total `r custom_numbers_to_words(plhiv2022)` people living with HIV in the world live [@unaids2022global].
-Quantifying the epidemic using statistics is an important part of the public health response, and the path towards disease control and elimination. 
+The real world questions relate to surveillance of the human immunodeficiency virus (HIV) epidemic in sub-Saharan Africa (SSA).
+It is estimated that `r round(ssa_plhiv2022 / plhiv2022 * 100)`% of the `r custom_numbers_to_words(plhiv2022)` people living with HIV (PLHIV) reside in SSA.
+Using statistics to quantify the epidemic is an important part of the public health response, and the path towards disease control and elimination.
+However, there are numerous challenges involved in obtaining suitable estimates of relevant indicators.
 
-The data in this thesis appertain to people's answers to survey questions or use of healthcare facilities.
-An important feature of the data is its location in space and time.
-Spatio-temporal data, while diverse, have distinctive commonalities which make its collective study valuable.
+The estimates in this thesis are based on data recorded from national household surveys or routinely collected from healthcare facilities.
+One important feature of this data is its location in space and time.
+I use modelling techniques from the field of spatio-temporal statistics.
+While diverse, spatio-temporal data have distinctive commonalities which can can be utilised across settings.
 
 Computation is an essential part of modern statistical practice.
-Each project chapter is accompanied by code, hosted on GitHub.
+Each project chapter, as well as the thesis itself, is accompanied by $\textsc{R}$ code, hosted on GitHub.
 
 ## Chapter overview
 
-* Chapter \@ref(hiv-aids): I begin by providing background on the HIV/AIDS epidemic.
-* Chapter \@ref(bayes-st): I then introduce the statistical concepts and notation used throughout the thesis.
+In this section, I provide a brief overview of the chapters to follow.
+
+* Chapter \@ref(hiv-aids): I begin by providing background on the HIV/AIDS epidemic, as well as describing the challenges faced by surveillance efforts.
+* Chapter \@ref(bayes-st): I then introduce the statistical concepts and notation used throughout the thesis, focusing on Bayesian modelling and computation.
 * Chapter \@ref(beyond-borders): The prevailing model for spatial structure used in small-area estimation [@besag1991bayesian] was designed with analysis of a grid of pixels in mind.
 In disease mapping, we work using the districts of a country, which are not a grid.
 I evaluate the practical consequences of this this concern [@howes2023beyond].
@@ -90,11 +95,11 @@ I estimate the size of behavioural risk groups across priority countries to enab
 Motivated by this model, I develop an approximate Bayesian inference method combining adaptive Gauss-Hermite quadrature with principal components analysis [@howes2023fast].
 I apply the method to data from Malawi, and analyse the consequences of inference method choice for policy relevant outcomes.
 Further, I open the door to a new class of fast, flexible, and accurate Bayesian inference algorithms.
-* Chapter \@ref(conclusions): I discuss avenues for future work, and my conclusions regarding the research.
-
-Figure \@ref(fig:chapter-flowchart) gives the dependency structure for the above chapters.
-Though the presented order is recommended, Chapter \@ref(beyond-borders), Chapter \@ref(multi-agyw) and Chapter \@ref(naomi-aghq) may be read in any order.
+* Chapter \@ref(conclusions): I discuss avenues for future work, and my conclusions regarding the research, as well as its strengths and weaknesses.
 
 ```{r chapter-flowchart, fig.cap="Flowchart presenting the recommended chapter dependencies for this thesis. The dashed line represents a recommended, but not required dependency."}
 knitr::include_graphics("figures/chapter-flowchart.pdf")
 ```
+
+Figure \@ref(fig:chapter-flowchart) gives the dependency structure for the chapters.
+Though chronological order is recommended, Chapter \@ref(beyond-borders), Chapter \@ref(multi-agyw) and Chapter \@ref(naomi-aghq) may be read in any order as, for the most part, they correspond to separable research projects.
