--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -33,6 +33,7 @@ knitr::opts_chunk$set(
 
 ```{r}
 deaths <- 40 * 1e6
+infections <- 86 * 1e6
 
 plhiv2022 <- 39 * 1e6
 deaths2022 <- 630 * 1e3
@@ -49,14 +50,17 @@ condom_averted_lb <- 10 * 1e6
 ## Background
 
 <!-- What is HIV -->
-Human immunodeficiency virus (HIV) is a retrovirus which infects humans.
-If left untreated, HIV can develop into a more advanced stage known as acquired immunodeficiency syndrome (AIDS).
+HIV is a retrovirus which infects humans.
+If untreated, HIV can develop into a more advanced stage known as acquired immunodeficiency syndrome (AIDS).
 HIV primarily attacks a type of white blood cell vital for the function of the immune system.
-As a result, AIDS is characterised by increased risk of developing opportunistic infections.
+As a result, AIDS is characterised by increased risk of developing opportunistic infections such as *Pneumocystis* pneumonia and tuberculosis.
 
-<!-- How is HIV transmitted -->
-HIV is transmitted by exposure to specific bodily fluids of an infected person.
+<!-- HIV is a big problem, plus how is it transmitted -->
+The first AIDS cases were reported in Los Angeles in the early 1980s.
+Since then, HIV has spread globally.
+Transmission occurs by exposure to specific bodily fluids of an infected person.
 The most common mode of transmission is via unprotected anal or vaginal sex, though transmission can also occur from a mother to her baby, or when drug injection equipment is shared.
+Approximately `r custom_numbers_to_words(infections)` people have become infected with HIV, and of those `r custom_numbers_to_words(deaths)` have died of AIDS-related causes.
 
 ```{r}
 pepfar <- 85 * 1e9
@@ -64,11 +68,9 @@ pepfar <- 85 * 1e9
 global_fund <- (24.2 + 5) * 1e9
 ```
 
-<!-- HIV is a big problem that a lot of effort goes into combating -->
-The first AIDS cases were reported in Los Angeles in the early 1980s.
-Since then, HIV has spread globally, and so far resulted in an estimated `r custom_numbers_to_words(deaths)` deaths.
-A major international effort has been made to address the epidemic, including by national governments, civil society organisations, pharmaceutical companies, research institutions, international agencies, and global health initiatives such as the President's Emergency Plan for AIDS Relief (PEPFAR; \$`r custom_numbers_to_words(pepfar)` invested) and the Global Fund to Fight AIDS, Tuberculosis, and Malaria (GFATM; \$`r custom_numbers_to_words(global_fund)` invested).
-Some interventions have had a large impact on the epidemic.
+<!-- A lot of effort going into it -->
+A major international effort has been made to address the epidemic, including by national governments, civil society organisations, pharmaceutical companies, research institutions, international agencies such as the Joint United Nations Programme on HIV/AIDS (UNAIDS), and global health initiatives such as the President's Emergency Plan for AIDS Relief (PEPFAR; \$`r custom_numbers_to_words(pepfar)` invested) and the Global Fund to Fight AIDS, Tuberculosis, and Malaria (GFATM; \$`r custom_numbers_to_words(global_fund)` invested).
+A number of interventions have had a substantial impact on the course of the epidemic:
 
 * Antiretroviral therapy (ART) is a drug which stops the virus from replicating in the body.
 By taking ART daily, a person living with HIV can live a full and healthy life.
@@ -88,6 +90,7 @@ knitr::include_graphics("figures/overall-picture.png")
 
 The epidemic response has seen both the yearly number of new HIV cases and number of AIDS-related deaths fall significantly since their respective peaks (Figure \ref{fig:overall-picture}).
 However, there remains significant distance to go in ending AIDS as a public health threat: in 2022 there were `r custom_numbers_to_words(infections2022)` people newly infected with HIV and `r custom_numbers_to_words(deaths2022)` AIDS-related deaths [@unaids2022global].
+Furthermore progress is halting due to lack of investment, COVID-19 and other reasons.
 
 <!-- Uneven burden in space -->
 There is substantial geographic inequality in disease burden.
@@ -121,41 +124,49 @@ Surveillance can used to track epidemic indicators, identify at-risk populations
 
 Important indicators include:
 
-* **HIV prevalence** The proportion of the population who have HIV, typically given as a percentage;
-* **HIV incidence** The rate of new HIV infections, typically given as number of new infections per 1000 person years; and
-* **ART coverage** The proportion of PLHIV who are on ART, typically given as a percentage.
+* **HIV prevalence** The proportion of the population who have HIV $\rho$, typically given as a percentage.
+Though an important indicator, HIV prevalence is for the most part used indirectly to calculate other indicators rather than directly itself.
+In some circumstances those other indicators can be difficult to estimate, and HIV prevlance can be a useful proxy.
+The number of PLHIV is given by $N\rho$, where $N$ is the population size.
+* **HIV incidence** The rate of new HIV infections $\lambda$, typically given as number of new infections per 1000 person years.
+HIV incidence can be specified in terms of HIV prevalence by $\lambda = N\Delta\rho$, where $\Delta\rho$ is the change in HIV prevalence over some time period.
+* **ART coverage** The proportion of PLHIV who are on ART $\alpha$, typically given as a percentage.
+Planning of treatment.
 
 ### Challenges
 
-<!-- Why is surveillance difficult -->
 There are significant difficulties associated with obtaining reliable, timely, estimates of these indicators at an appropriate resolution.
 
 1. **Data sparsity**
 Collection of data is costly and time consuming.
-As a result, direct data is unlikely to be available for the particular time and location of interest.
-2. **Survey response biases**
+As a result, limited direct data might be available for the particular time, location, and sub-population of interest.
+2. **Response biases**
 Under-reporting.
 Non-response.
 Measurement error.
 3. **Hard to reach populations**
-Many of the key populations at greatest risk are difficult to reach.
+Many of those at greatest risk, including KPs, are difficult to reach.
 May not appear on household survey sampling frames.
-4. **Changing demographics**
+4. **Denominators and demography**
 Many indicators are rates or proportions, incorporating the population at risk in the denominator.
-However, accurately estimating these population denominators is usually itself a challenging task.
-Taking a ratio of uncertain quantities only goes to amplify the uncertainty.
+However, accurately estimating these denominators is usually itself a challenging task, and taking a ratio of uncertain quantities only goes to amplify the uncertainty.
+For example, ART coverage has PLHIV as the denominator, which itself has the population size as its denominator.
 
 ### Statistical methods
 
-These limitations foreground the importance of statistical modelling.
-Direct interpretation of the data is at worst useless, and at best misleading.
-Important modelling techniques include:
+The above challenges make direct interpretation of data misleading, and foreground the importance of careful statistical modelling.
 
 1. **Borrowing information**
+Although survey responses from women aged 20-24 are not directly informative about HIV prevalence in women 25-29, they are indirectly informative.
 2. **Evidence synthesis**
+Multiple sources of evidence can be combined to overcome limitations of any one data source.
 3. **Expert guidance**
+Expert epidemiological, demographic opinion can be used to improve estimates.
 
 ### Future trends
 
 Aims for HIV response going forward, and surveillance capabilities are needed to meet them.
-Phasing out of nationally-representative household surveys for HIV.
+
+1. **Greater reliance on routine health system data** Phasing out of nationally representative household surveys.
+2. **Integration with other health programs**
+3. **Use of mobile technologies**
