--- a/figures/hierarchical-structure.tex
+++ b/figures/hierarchical-structure.tex
@@ -11,13 +11,14 @@
 
 \begin{tikzpicture}[node distance = 2cm, auto]
     \node[category] at (0, 0) (1) {Individual 1};
-    \node[category] at (10, 0) (2) {Individual $n$};
+    \node[empty] at (5, 0) (9) {$\cdots$};
+    \node[category] at (10, 0) (2) {Individual $J$};
     \node[category] at (-2.5, -4) (3) {Measurement 1};
     \node[empty] at (0, -4) (4) {$\cdots$};
-    \node[category] at (2.5, -4) (5) {Measurement $m_1$};
+    \node[category] at (2.5, -4) (5) {Measurement $n_1$};
     \node[category] at (7.5, -4) (6) {Measurement 1};
     \node[empty] at (10, -4) (7) {$\cdots$};
-    \node[category] at (12.5, -4) (8) {Measurement $m_n$};
+    \node[category] at (12.5, -4) (8) {Measurement $n_J$};
     
     \path[line] (1) -- (3);
     \path[line] (1) -- (4);
