--- a/front-and-back-matter/_acknowledgements.Rmd
+++ b/front-and-back-matter/_acknowledgements.Rmd
@@ -2,7 +2,7 @@ Thanks to Seth Flaxman and Jeff Eaton for supervision of this research;
 staff and students of the StatML CDT at Imperial and Oxford;
 members of the HIV Inference Group at Imperial;
 members of the Machine Learning and Global Health Network;
-the Bill & Melinda Gates Foundation and EPSRC for funding this PhD;
+the Bill & Melinda Gates Foundation and EPSRC via the StatML CDT for funding this PhD;
 Mike McLaren, Kevin Esvelt, the Nucleic Acid Observatory team, and the Sculpting Evolution lab for hosting my visit to the MIT Media Lab;
 Alex Stringer for hosting my visit to Waterloo;
 the Effective Altruism community;
